<resources>
    <string name="app_name">AppSgs</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listado_tarea_fragment">Listado de Tareas Asignadas</string>
    <string name="rendicion_gasto_fragment">Rendición de Gastos</string>
    <string name="tipo_documento_fragment">Tipo de documento:</string>
    <string name="categoria_documento_fragment">Categoría de documento:</string>
    <string name="monto_documento_fragment">Monto de documento:</string>
    <string name="fecha_documento_fragment">Fecha de documento:</string>
    <string name="comentario">Comentario:</string>

    <string name="action_listDatos">Listar Datos</string>

    <string name="ordenes">Ordenes de Inspección:</string>

    <string name="title_entry_1">Actividades</string>
    <string name="title_entry_2">Reporte</string>
    <string name="title_entry_3">Gastos</string>
    <string name="cerrarSesion">Cerrar Sesión</string>

    <string name="ingresarDocumento">Ingresar Documento</string>
    <string name="tipoDocumento"><b>Tipo de Documento</b></string>
    <string name="categoriaDocumento"><b>Categoria Documento</b></string>
    <string name="montoDocumento"><b>Monto Documento</b></string>
    <string name="fechaEmision"><b>Fecha Emisión</b></string>

    <string name="gps">GPS</string>
    <string name="guardar">Grabar</string>
    <string name="retornar">Retornar</string>

    <string name="si">Si</string>
    <string name="no">No</string>

</resources>
